[gd_scene load_steps=14 format=3 uid="uid://cw2guvrg3d7vo"]

[ext_resource type="Texture2D" uid="uid://gsiop4q2ns2w" path="res://Assets/Ui/Michiru cellphone.png" id="1_bmj4r"]
[ext_resource type="Script" path="res://Assets/Scripts/pause_menu.gd" id="1_u41e0"]
[ext_resource type="Shader" path="res://Scenes/pause_menu.gdshader" id="2_l3u7l"]
[ext_resource type="Texture2D" uid="uid://droclwh82vb3" path="res://Assets/Ui/Message Box Outline scaled.png" id="2_vuguj"]
[ext_resource type="Texture2D" uid="uid://d0a7gf5a33h7e" path="res://Assets/Ui/Gear Outline scaled.png" id="3_nx6ou"]
[ext_resource type="Texture2D" uid="uid://bomtkbalw5buh" path="res://Assets/Ui/Camera Outline scaled.png" id="4_k4cgc"]
[ext_resource type="Texture2D" uid="uid://coexxv6y1ok8p" path="res://Assets/Ui/Exclamation Mark Outline scaled.png" id="5_s6h6b"]
[ext_resource type="Texture2D" uid="uid://b1iruv37e8spi" path="res://Assets/Ui/Save Outline scaled.png" id="6_lw7e8"]
[ext_resource type="Texture2D" uid="uid://brt6lvbinlcba" path="res://Assets/Ui/Door Open Outline scaled.png" id="7_kytox"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_enhgn"]
shader = ExtResource("2_l3u7l")
shader_parameter/lod = 0.337

[sub_resource type="Animation" id="Animation_bu72i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.337]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_r4jsd"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.337, 0.88]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v8n06"]
_data = {
"RESET": SubResource("Animation_bu72i"),
"blur": SubResource("Animation_r4jsd")
}

[node name="pause menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u41e0")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_enhgn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -575.0
offset_right = 574.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9, 316)
scale = Vector2(0.37, 0.37)
texture = ExtResource("1_bmj4r")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -149.0
offset_top = 49.0
offset_right = 131.0
offset_bottom = 535.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 2

[node name="messages" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
icon = ExtResource("2_vuguj")

[node name="Settings" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
icon = ExtResource("3_nx6ou")

[node name="Gallery Camera" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
icon = ExtResource("4_k4cgc")

[node name="Quests" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
icon = ExtResource("5_s6h6b")

[node name="Save" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
icon = ExtResource("6_lw7e8")

[node name="Quit" type="Button" parent="PanelContainer/GridContainer"]
layout_mode = 2
icon = ExtResource("7_kytox")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v8n06")
}

[connection signal="pressed" from="PanelContainer/GridContainer/messages" to="." method="_on_messages_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/Gallery Camera" to="." method="_on_gallery_camera_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/Quests" to="." method="_on_quests_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/GridContainer/Quit" to="." method="_on_quit_pressed"]
